--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Ефремова Екатерина</h1>
     <p>Всем привет! это моя страничка на гитхабе</p>
-
+   <a href="https://portal.edu.asu.ru/user/profile.php?id=35457"> Ссылка на мой профиль</a>
 </body>
 </html>
